# fts-encrypted-gui-demo

./: Cargo.toml  LICENSE  README.md
src/: enron_emails.rs  main.rs
test_emails/: email_clean.py
